--- a/src/common/less/index.less
+++ b/src/common/less/index.less
@@ -1,1 +1,9 @@
 @import "./reset.less";
+
+.content .vux-slider > .vux-indicator > a > .vux-icon-dot{
+  background-color: #fff;
+}
+.content .vux-slider > .vux-indicator > a > .vux-icon-dot.active{
+  background-color: #FF5C5B;
+  width: .346667rem;
+}
