--- a/src/common/less/reset.less
+++ b/src/common/less/reset.less
@@ -1,5 +1,5 @@
 html {
-  color: #424242;
+  color: #212121;
   background: #fff;
   overflow-y: scroll;
   -webkit-text-size-adjust: 100%;
@@ -14,7 +14,7 @@ html * {
 
 html,
 body {
-  font-family: "Hiragino Sans GB", "Microsoft YaHei", Helvetica, Arial, sans-serif;
+  font-family: "PingFang SC", "Microsoft YaHei", Helvetica, Arial, sans-serif;
   -webkit-overflow-scrolling: touch;
 }
 
