--- a/src/common/less/_modules/_variables.less
+++ b/src/common/less/_modules/_variables.less
@@ -19,7 +19,7 @@
 @brand-danger: #d9534f;     //危险红
 
 //页面风格颜色
-@theme-yellow: #FFCD32;        //主色
+@theme-main: #FF6551;        //主色
 @theme-green: #2F8C92;         //辅色
 @theme-orange: #EB6419;        //橙色
 
@@ -32,7 +32,7 @@
 @body-bg-yellow:#ffde00;     //黄色背景
 
 //字体颜色
-@text-color:#000000;         //标题
+@text-color:#FF6551;         //常用文字颜色
 @text-color-light:#474949;   //正文 
 @text-color-lighter:#979797; //版权小字
 @text-color-gray:#474949;    //灰色
